// Vitest Snapshot v1

exports[`allows custom classes 1`] = `
"<pre class=\\"shiki nord has-diff\\" style=\\"background-color: #2e3440ff\\"><code><span class=\\"line\\"></span>
<span class=\\"line\\"><span style=\\"color: #D8DEE9FF\\">		</span><span style=\\"color: #81A1C1\\">function</span><span style=\\"color: #ECEFF4\\">()</span><span style=\\"color: #D8DEE9FF\\"> </span><span style=\\"color: #ECEFF4\\">{</span></span>
<span class=\\"line is-diffed diff-remove\\"><span style=\\"color: #D8DEE9FF\\">			</span><span style=\\"color: #D8DEE9\\">console</span><span style=\\"color: #ECEFF4\\">.</span><span style=\\"color: #88C0D0\\">log</span><span style=\\"color: #D8DEE9FF\\">(</span><span style=\\"color: #ECEFF4\\">&#39;</span><span style=\\"color: #A3BE8C\\">owo</span><span style=\\"color: #ECEFF4\\">&#39;</span><span style=\\"color: #D8DEE9FF\\">) </span></span>
<span class=\\"line is-diffed diff-remove\\"><span style=\\"color: #D8DEE9FF\\">			</span><span style=\\"color: #D8DEE9\\">console</span><span style=\\"color: #ECEFF4\\">.</span><span style=\\"color: #88C0D0\\">log</span><span style=\\"color: #D8DEE9FF\\">(</span><span style=\\"color: #ECEFF4\\">&#39;</span><span style=\\"color: #A3BE8C\\">uwu</span><span style=\\"color: #ECEFF4\\">&#39;</span><span style=\\"color: #D8DEE9FF\\">) </span></span>
<span class=\\"line\\"><span style=\\"color: #D8DEE9FF\\">		</span><span style=\\"color: #ECEFF4\\">}</span></span>
<span class=\\"line\\"><span style=\\"color: #D8DEE9FF\\">	</span></span></code></pre>"
`;

exports[`allows custom tags 1`] = `
"<pre class=\\"shiki nord has-diff\\" style=\\"background-color: #2e3440ff\\"><code><span class=\\"line\\"></span>
<span class=\\"line\\"><span style=\\"color: #D8DEE9FF\\">		</span><span style=\\"color: #81A1C1\\">function</span><span style=\\"color: #ECEFF4\\">()</span><span style=\\"color: #D8DEE9FF\\"> </span><span style=\\"color: #ECEFF4\\">{</span></span>
<span class=\\"line diff remove\\"><span style=\\"color: #D8DEE9FF\\">			</span><span style=\\"color: #D8DEE9\\">console</span><span style=\\"color: #ECEFF4\\">.</span><span style=\\"color: #88C0D0\\">log</span><span style=\\"color: #D8DEE9FF\\">(</span><span style=\\"color: #ECEFF4\\">&#39;</span><span style=\\"color: #A3BE8C\\">owo</span><span style=\\"color: #ECEFF4\\">&#39;</span><span style=\\"color: #D8DEE9FF\\">) </span></span>
<span class=\\"line diff add\\"><span style=\\"color: #D8DEE9FF\\">			</span><span style=\\"color: #D8DEE9\\">console</span><span style=\\"color: #ECEFF4\\">.</span><span style=\\"color: #88C0D0\\">log</span><span style=\\"color: #D8DEE9FF\\">(</span><span style=\\"color: #ECEFF4\\">&#39;</span><span style=\\"color: #A3BE8C\\">uwu</span><span style=\\"color: #ECEFF4\\">&#39;</span><span style=\\"color: #D8DEE9FF\\">) </span></span>
<span class=\\"line\\"><span style=\\"color: #D8DEE9FF\\">		</span><span style=\\"color: #ECEFF4\\">}</span></span>
<span class=\\"line\\"><span style=\\"color: #D8DEE9FF\\">	</span></span></code></pre>"
`;

exports[`generates diffed lines on the same line as their tag 1`] = `
"<pre class=\\"shiki nord has-diff\\" style=\\"background-color: #2e3440ff\\"><code><span class=\\"line\\"></span>
<span class=\\"line\\"><span style=\\"color: #D8DEE9FF\\">		</span><span style=\\"color: #81A1C1\\">function</span><span style=\\"color: #ECEFF4\\">()</span><span style=\\"color: #D8DEE9FF\\"> </span><span style=\\"color: #ECEFF4\\">{</span></span>
<span class=\\"line diff remove\\"><span style=\\"color: #D8DEE9FF\\">			</span><span style=\\"color: #D8DEE9\\">console</span><span style=\\"color: #ECEFF4\\">.</span><span style=\\"color: #88C0D0\\">log</span><span style=\\"color: #D8DEE9FF\\">(</span><span style=\\"color: #ECEFF4\\">&#39;</span><span style=\\"color: #A3BE8C\\">owo</span><span style=\\"color: #ECEFF4\\">&#39;</span><span style=\\"color: #D8DEE9FF\\">) </span></span>
<span class=\\"line diff add\\"><span style=\\"color: #D8DEE9FF\\">			</span><span style=\\"color: #D8DEE9\\">console</span><span style=\\"color: #ECEFF4\\">.</span><span style=\\"color: #88C0D0\\">log</span><span style=\\"color: #D8DEE9FF\\">(</span><span style=\\"color: #ECEFF4\\">&#39;</span><span style=\\"color: #A3BE8C\\">uwu</span><span style=\\"color: #ECEFF4\\">&#39;</span><span style=\\"color: #D8DEE9FF\\">) </span></span>
<span class=\\"line\\"><span style=\\"color: #D8DEE9FF\\">		</span><span style=\\"color: #ECEFF4\\">}</span></span>
<span class=\\"line\\"><span style=\\"color: #D8DEE9FF\\">	</span></span></code></pre>"
`;
